blog-app/blogk8s/frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend-service
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-frontend
  template:
    metadata:
      labels:
        app: blog-frontend
    spec:
      containers:
      - name: blog-frontend
        image: shubham8955701054/frontend-blog-app
---
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: blog-frontend
