blog-app/blogk8s/gateway_frontend_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-blog-frontend
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog-frontend-vs
spec:
  hosts:
  - "*"
  gateways:
  - gateway-blog-frontend
  http:
  - route:
    - destination:
        host: blog-frontend-service
        port:
          number: 3000
